update: edit get community members
